[tool.poetry]
name = "classifier"
version = "0.1.0"
description = ""
authors = ["Vladislav Kruglikov <lildatascientist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
